map filter spacing corrections

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -73,7 +73,7 @@ main {
 }
 
 .logo-main {
-  width: 8rem;
+  width: 10rem;
 }
 
 .header-items-main {
