--- a/frontend/src/styles/MapStyles.css
+++ b/frontend/src/styles/MapStyles.css
@@ -241,7 +241,7 @@
 
     .select-filter-content {
       width: 20%;
-      margin-top: -4rem;
+      margin-top: 5px;
     }
 
     .btn-finish-address,
